@@ -11,6 +11,7 @@ pub(crate) mod creating_config;
 pub(crate) mod creating_service;
 pub(crate) mod downloading;
 pub(crate) mod downloading_backoff;
+pub(crate) mod initializing;
 pub(crate) mod installing;
 pub(crate) mod running;
 pub(crate) mod setup_failed;
